# Actinium

./: README.md  actinium.opam  dune-project  ideas.md  test.sh
examples/: e1.ac  e2.ac  e3.ac  e4.ac  e5.ac  e6.ac
lib/: Err.ml  Err.mli  Interpreter.ml  Interpreter.mli  Main.ml  Main.mli  Parser.ml  Parser.mli  Scanner.ml  Scanner.mli  Value.ml  Value.mli  dune
test/: dune
tests/: t0.in  t0.out  t1.in  t10.in  t11.in  t13.in  t14.in  t15.in  t16.in  t17.in  t18.in  t19.in  t2.in  t20.in  t20.out  t21.in  t22.in  t23.in  t24.in  t25.in  t26.in  t26.out  t27.in  t28.in  t28.out  t29.in  t3.in  t30.in  t31.in  t32.in  t33.in  t34.in  t35.in  t36.in  t36.out  t37.in  t38.in  t38.out  t39.in  t39.out  (+12 more)
