(lang dune 3.12)

(name actinium)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "k-dx")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name actinium)
 (synopsis "A Javascript-like language (interpreter)")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
